# kroak-time-ticker

./: API_SPEC.md  CLAUDE.md  Cargo.toml  HANDOFF.md
src/: config.rs  db.rs  main.rs  server.rs  state.rs
src/static/: list.html  scroll.html  ticker.html
test/: mock_server.py
